# NumericalMethods

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  temp.txt
1/: CMakeLists.txt
10/: CMakeLists.txt  exc10.cpp  exc10test.cpp  test.md
11/: CMakeLists.txt  main.cpp
12/: CMakeLists.txt
13/: CMakeLists.txt  main.cpp
14/: CMakeLists.txt  exc14.cpp  main.cpp
2/: CMakeLists.txt
3/: CMakeLists.txt  exc3.cpp
4/: CMakeLists.txt
5/: CMakeLists.txt
6/: CMakeLists.txt  main.cpp
7/: CMakeLists.txt  exc7.cpp
8/: CMakeLists.txt  exc8.cpp
9/: CMakeLists.txt
Code/: CMakeLists.txt
Code/1/: CMakeLists.txt  main.cpp  utilities.h
Code/10/: Lecture10_TerminalJens.docx  main.cpp
Code/12/: graph.m  main.cpp
Code/13/: CMakeLists.txt  main.cpp
Code/2/: CMakeLists.txt  main.cpp
Code/3/: CMakeLists.txt  main.cpp
Code/4/: main.cpp
Code/5/: main.cpp
Code/6/: main.cpp
Code/7/: CMakeLists.txt  main.cpp
Numerical-Recipes/: svd.h  tridag.h
exam/: CMakeLists.txt  exam1.cpp  exam2.cpp  exam3.cpp  exam3_plot.py  exam3_results.txt  exam4.cpp  exam5.cpp  main4.cpp  main5.cpp  main6.cpp
exam_prep/: 2022jun1.cpp  2022jun2.cpp  2022jun3.cpp  2022jun3_plot.py  2022jun3_results.txt  2023aug5.cpp  CMakeLists.txt
mandatory_1/: CMakeLists.txt
mandatory_2/: CMakeLists.txt  man2.cpp
mandatory_3/: CMakeLists.txt  main.cpp  man3.cpp
mandatory_4/: CMakeLists.txt
mandatory_5/: CMakeLists.txt  equations.nb
utils/: de_rule.h  errors.h  errors_multi.h  integrals.h  multi_roots.h  ode.h  parabolic_pde.h  pde.h  utilities.h
(+71 files in other folders)
