cmake_minimum_required(VERSION 3.20)
project(NumericalMethods)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_PARALLEL_LEVEL 10)

add_compile_options(-Wall -Wextra -pedantic -Wconversion -Wshadow)
include_directories(Numerical-Recipes/)
include_directories(.)


add_subdirectory(1/)
add_subdirectory(2/)
add_subdirectory(3/)
add_subdirectory(4/)
add_subdirectory(5/)
add_subdirectory(6/)
add_subdirectory(7/)
add_subdirectory(8/)
add_subdirectory(9/)
add_subdirectory(10/)
add_subdirectory(11/)
add_subdirectory(12/)
add_subdirectory(13/)
add_subdirectory(14/)
add_subdirectory(mandatory_1/)
add_subdirectory(mandatory_2/)
add_subdirectory(mandatory_3/)
add_subdirectory(mandatory_4/)
add_subdirectory(mandatory_5/)

add_subdirectory(exam/)
